--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,14 +1,24 @@
 <html>
   <head>
     {% if title %}
-    <title>{{ title }} - Jeffblog</title>
+    <title>{{ title }} - microblog</title>
     {% else %}
-    <title>Welcome to Jeffblog</title>
+    <title>microblog</title>
     {% endif %}
   </head>
   <body>
-    <div>Jeffblog: <a href="/index">Home</a></div>
+    <div>
+      Microblog:
+      <a href="/index">Home</a>
+      <a href="/login">Login</a>
+    </div>
     <hr />
-    {% block content %}{% endblock %}
+    {% with messages = get_flashed_messages() %} {% if messages %}
+    <ul>
+      {% for message in messages %}
+      <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %} {% endwith %} {% block content %}{% endblock %}
   </body>
 </html>
